change to dakherstellingen

--- a/algemene-voorwaarden.html
+++ b/algemene-voorwaarden.html
@@ -6,27 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Language" content="nl">
 
-    <title>Algemene Voorwaarden | Dakreiniging LM / Dakwerken LM</title>
+    <title>Algemene Voorwaarden | Dakherstellingen LM / Dakwerken LM</title>
     <meta name="description"
-        content="Algemene voorwaarden voor de diensten van DAKREINIGING LM / DAKWERKEN LM, inclusief definities, toepassingsgebied, prijzen, betalingsvoorwaarden, en aansprakelijkheid." />
-    <meta name="author" content="Dakreiniging LM" />
+        content="Algemene voorwaarden voor de diensten van DAKHERSTELLINGEN LM / DAKWERKEN LM, inclusief definities, toepassingsgebied, prijzen, betalingsvoorwaarden, en aansprakelijkheid." />
+    <meta name="author" content="Dakherstellingen LM" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1D4ED8" />
 
 
-    <meta property="og:title" content="Algemene Voorwaarden | Dakreiniging LM / Dakwerken LM" />
+    <meta property="og:title" content="Algemene Voorwaarden | Dakherstellingen LM / Dakwerken LM" />
     <meta property="og:description"
-        content="Algemene voorwaarden voor de diensten van DAKREINIGING LM / DAKWERKEN LM." />
+        content="Algemene voorwaarden voor de diensten van DAKHERSTELLINGEN LM / DAKWERKEN LM." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.dakreiniginglm.be/algemene-voorwaarden.html" />
-    <meta property="og:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
-    <meta property="og:site_name" content="Dakreiniging LM" />
+    <meta property="og:url" content="https://www.dakherstellingenlm.be/algemene-voorwaarden.html" />
+    <meta property="og:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+    <meta property="og:site_name" content="Dakherstellingen LM" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Algemene Voorwaarden | Dakreiniging LM / Dakwerken LM" />
+    <meta name="twitter:title" content="Algemene Voorwaarden | Dakherstellingen LM / Dakwerken LM" />
     <meta name="twitter:description"
-        content="Algemene voorwaarden voor de diensten van DAKREINIGING LM / DAKWERKEN LM." />
-    <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+        content="Algemene voorwaarden voor de diensten van DAKHERSTELLINGEN LM / DAKWERKEN LM." />
+    <meta name="twitter:image"
+        content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
 
     <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
@@ -53,7 +54,7 @@
     <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500"
         role="navigation">
         <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5">
-            <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakreiniging LM <span
+            <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakherstellingen LM <span
                     class="hidden md:inline">&VerticalBar;</span><span class="block md:ml-2 md:inline">Dakwerken
                     LM</span></a>
             <button id="navToggle" aria-label="Toggle navigation" aria-expanded="false"
@@ -454,7 +455,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm md:text-base border-t border-blue-300 pt-8">
                 <div class="text-center">
                     <h4 class="font-bold text-lg">Dakwerken LM</h4>
-                    <h4 class="font-bold text-lg mb-2">Dakreiniging LM</h4>
+                    <h4 class="font-bold text-lg mb-2">Dakherstellingen LM</h4>
                     <p>&copy; 2025 Alle rechten voorbehouden</p>
                     <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
                         <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
