--- a/diensten/dakherstellingen-hellende-daken.html
+++ b/diensten/dakherstellingen-hellende-daken.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Language" content="nl">
 
-    <title>Dakherstellingen Hellende Daken | Lekkage Oplossen | Dakreiniging LM</title>
+    <title>Dakherstellingen Hellende Daken Leuven & Herentals | Lekkage Oplossen | Dakherstellingen LM</title>
     <meta name="description"
-        content="Snelle en professionele dakherstellingen voor hellende daken in Herentals en omgeving door Dakreiniging LM. Specialist in lekkage opsporen, stormschade en slijtage. Vraag een gratis dakcontrole aan!" />
-    <meta name="author" content="Dakreiniging LM" />
+        content="Snelle en professionele dakherstellingen voor hellende daken in Leuven, Herentals en heel Vlaams-Brabant. Specialist in lekkage opsporen, stormschade en slijtage herstel. Vraag een gratis dakcontrole aan bij Dakherstellingen LM!" />
+    <meta name="author" content="Dakherstellingen LM" />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#1D4ED8" />
 
-    <link rel="canonical" href="https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html">
+    <link rel="canonical" href="https://www.dakherstellingenlm.be/dakherstellingen-hellende-daken.html">
 
-    <meta property="og:title" content="Dakherstellingen Hellende Daken | Dakreiniging LM" />
+    <meta property="og:title" content="Dakherstellingen Hellende Daken in Leuven & Herentals | Dakherstellingen LM" />
     <meta property="og:description"
-        content="Uw specialist voor dakherstellingen aan hellende daken in de regio Groot-Leuven. Snelle service bij lekkages en stormschade." />
+        content="Uw specialist voor dakherstellingen aan hellende daken in de regio Groot-Leuven en Herentals. Snelle service bij lekkages en stormschade herstel." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
-    <meta property="og:image" content="https://www.dakreiniginglm.be/assets/dak.webp" />
-    <meta property="og:site_name" content="Dakreiniging LM" />
+    <meta property="og:url" content="https://www.dakherstellingenlm.be/dakherstellingen-hellende-daken.html" />
+    <meta property="og:image" content="https://www.dakherstellingenlm.be/assets/dak.webp" />
+    <meta property="og:site_name" content="Dakherstellingen LM" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Dakherstellingen Hellende Daken | Dakreiniging LM" />
+    <meta name="twitter:title" content="Dakherstellingen Hellende Daken Leuven | Dakherstellingen LM" />
     <meta name="twitter:description"
-        content="Snel en vakkundig uw lekkage of stormschade aan hellend dak hersteld. Gratis dakcontrole beschikbaar!" />
+        content="Snel en vakkundig uw lekkage of stormschade aan hellend dak hersteld in Vlaams-Brabant. Vraag uw gratis dakcontrole aan!" />
     <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
     <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
@@ -51,7 +51,7 @@
     <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500"
         role="navigation">
         <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5">
-            <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakreiniging LM <span
+            <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakherstellingen LM <span
                     class="hidden md:inline">&VerticalBar;</span><span class="block md:ml-2 md:inline">Dakwerken
                     LM</span></a>
             <button id="navToggle" aria-label="Toggle navigation" aria-expanded="false"
@@ -153,9 +153,9 @@
             <div class="max-w-4xl mx-auto">
                 <div class="space-y-6 text-gray-800 leading-relaxed">
                     <p class="text-lg">
-                        Als familiebedrijf van vader en zoon, Dakreiniging LM, zijn wij uw gespecialiseerde partner voor
-                        het uitvoeren van allerhande dakherstellingen aan hellende daken in de regio Herentals en
-                        Groot-Leuven. Of het nu gaat om stormschade, onverwachte lekkages of de natuurlijke slijtage van
+                        Als familiebedrijf van vader en zoon, Dakherstellingen LM, zijn wij uw gespecialiseerde partner voor
+                        het uitvoeren van allerhande dakherstellingen aan hellende daken in Groot-Leuven, Herentals en heel Vlaams-Brabant. 
+                        Of het nu gaat om stormschade, onverwachte lekkages of de natuurlijke slijtage van
                         uw dakbedekking&dash;wij staan klaar met een snelle, eerlijke en professionele aanpak om uw dak
                         snel weer in topconditie te brengen.
                     </p>
@@ -228,7 +228,7 @@
 
                     <p class="mt-6 text-lg">
                         Bij ons komt u niet voor verrassingen te staan. Wij houden van transparante communicatie en een
-                        persoonlijke aanpak. Uw dak is bij Dakreiniging LM in goede handen; we leveren vakmanschap met
+                        persoonlijke aanpak. Uw dak is bij Dakherstellingen LM in goede handen; we leveren vakmanschap met
                         de hoogste kwaliteitsstandaarden.
                     </p>
 
@@ -256,7 +256,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm md:text-base border-t border-blue-300 pt-8">
                 <div class="text-center">
                     <h4 class="font-bold text-lg">Dakwerken LM</h4>
-                    <h4 class="font-bold text-lg mb-2">Dakreiniging LM</h4>
+                    <h4 class="font-bold text-lg mb-2">Dakherstellingen LM</h4>
                     <p>&copy; 2025 Alle rechten voorbehouden</p>
                     <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
                         <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
@@ -284,16 +284,16 @@
         {
           "@context": "https://schema.org",
           "@type": "Service",
-          "serviceType": "Dakherstellingen - Hellende Daken",
-          "name": "Dakherstellingen Hellende Daken door Dakreiniging LM",
-          "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Herentals en Groot-Leuven. Inclusief gratis dakcontrole.",
-          "url": "https://www.dakreiniginglm.be/dakherstellingen-hellende-daken.html",
+          "serviceType": "Dakherstellingen Hellende Daken in Leuven & Herentals",
+          "name": "Dakherstellingen Hellende Daken: Lekkage & Stormschade door Dakherstellingen LM",
+          "description": "Snelle en professionele dakherstellingen voor lekkages, stormschade en algemene slijtage aan hellende daken in de regio Groot-Leuven, Herentals en Vlaams-Brabant. Inclusief gratis dakcontrole.",
+          "url": "https://www.dakherstellingenlm.be/dakherstellingen-hellende-daken.html",
           "provider": {
             "@type": "LocalBusiness",
-            "@id": "https://www.dakreiniginglm.be/#organization",
-            "name": "Dakreiniging LM",
-            "image": "https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png",
-            "url": "https://www.dakreiniginglm.be",
+            "@id": "https://www.dakherstellingenlm.be/#organization",
+            "name": "Dakherstellingen LM",
+            "image": "https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png",
+            "url": "https://www.dakherstellingenlm.be",
             "telephone": "+32 473 67 19 44",
             "address": {
               "@type": "PostalAddress",
@@ -307,24 +307,24 @@
             ]
           },
             "areaServed": [
-                { "@type": "AdministrativeArea", "name": "Leuven" },
-                { "@type": "AdministrativeArea", "name": "Bierbeek" },
-                { "@type": "AdministrativeArea", "name": "Boutersem" },
-                { "@type": "AdministrativeArea", "name": "Lubbeek" },
-                { "@type": "AdministrativeArea", "name": "Holsbeek" },
-                { "@type": "AdministrativeArea", "name": "Rotselaar" },
-                { "@type": "AdministrativeArea", "name": "Herent" },
-                { "@type": "AdministrativeArea", "name": "Haacht" },
-                { "@type": "AdministrativeArea", "name": "Keerbergen" },
-                { "@type": "AdministrativeArea", "name": "Aarschot" },
-                { "@type": "AdministrativeArea", "name": "Diest" },
-                { "@type": "AdministrativeArea", "name": "Scherpenheuvel" },
-                { "@type": "AdministrativeArea", "name": "Bekkevoort" },
-                { "@type": "AdministrativeArea", "name": "Kortenaken" },
-                { "@type": "AdministrativeArea", "name": "Glabeek" },
-                { "@type": "AdministrativeArea", "name": "Linter" },
-                { "@type": "AdministrativeArea", "name": "Tienen" },
-                { "@type": "AdministrativeArea", "name": "Herentals" }
+              { "@type": "AdministrativeArea", "name": "Leuven" },
+              { "@type": "AdministrativeArea", "name": "Bierbeek" },
+              { "@type": "AdministrativeArea", "name": "Boutersem" },
+              { "@type": "AdministrativeArea", "name": "Lubbeek" },
+              { "@type": "AdministrativeArea", "name": "Holsbeek" },
+              { "@type": "AdministrativeArea", "name": "Rotselaar" },
+              { "@type": "AdministrativeArea", "name": "Herent" },
+              { "@type": "AdministrativeArea", "name": "Haacht" },
+              { "@type": "AdministrativeArea", "name": "Keerbergen" },
+              { "@type": "AdministrativeArea", "name": "Aarschot" },
+              { "@type": "AdministrativeArea", "name": "Diest" },
+              { "@type": "AdministrativeArea", "name": "Scherpenheuvel" },
+              { "@type": "AdministrativeArea", "name": "Bekkevoort" },
+              { "@type": "AdministrativeArea", "name": "Kortenaken" },
+              { "@type": "AdministrativeArea", "name": "Glabeek" },
+              { "@type": "AdministrativeArea", "name": "Linter" },
+              { "@type": "AdministrativeArea", "name": "Tienen" },
+              { "@type": "AdministrativeArea", "name": "Herentals" }
             ],
           "hasOfferCatalog": {
             "@type": "OfferCatalog",
