--- a/diensten/dakherstellingen-platte-daken.html
+++ b/diensten/dakherstellingen-platte-daken.html
@@ -6,33 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="Content-Language" content="nl">
 
-  <title>Platte Daken Herstellen & Onderhoud | Waterdichte Oplossingen | Dakreiniging LM</title>
+  <title>Platte Daken Herstellen & Onderhoud | Waterdichte Oplossingen | Dakherstellingen LM</title>
   <meta name="description"
     content="Specialist in herstellingen en onderhoud van platte daken (EPDM, roofing, PVC) in Herentals en omgeving. Voorkom lekkages en verleng de levensduur met onze professionele service. Vraag advies aan!" />
-  <meta name="author" content="Dakreiniging LM" />
+  <meta name="author" content="Dakherstellingen LM" />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#1D4ED8" />
 
-  <link rel="canonical" href="https://www.dakreiniginglm.be/dakherstellingen-platte-daken.html">
+  <link rel="canonical" href="https://www.dakherstellingenlm.be/dakherstellingen-platte-daken.html">
 
-  <meta property="og:title" content="Platte Daken Herstellen & Onderhoud | Dakreiniging LM" />
+  <meta property="og:title" content="Platte Daken Herstellen & Onderhoud | Dakherstellingen LM" />
   <meta property="og:description"
     content="Professionele onderhoudsdiensten en herstellingen voor platte daken (EPDM, roofing) in de regio Herentals en Leuven. Voorkom problemen met preventief onderhoud." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.dakreiniginglm.be/dakherstellingen-platte-daken.html" />
-  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
-  <meta property="og:site_name" content="Dakreiniging LM" />
+  <meta property="og:url" content="https://www.dakherstellingenlm.be/dakherstellingen-platte-daken.html" />
+  <meta property="og:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+  <meta property="og:site_name" content="Dakherstellingen LM" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Platte Daken Herstellen & Onderhoud | Dakreiniging LM" />
+  <meta name="twitter:title" content="Platte Daken Herstellen & Onderhoud | Dakherstellingen LM" />
   <meta name="twitter:description"
     content="Houd uw plat dak in topconditie met onze expertise. Specialist in herstellingen, reiniging en preventief onderhoud voor alle platdaktypes." />
-  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+  <meta name="twitter:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
   <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
+  <meta name="apple-mobile-web-app-title" content="Dakherstellingen-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest" />
 
   <link rel="stylesheet" href="/assets/css/output.css?v=20250724">
@@ -51,8 +51,9 @@
   <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500"
     role="navigation">
     <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5">
-      <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakreiniging LM <span
-          class="hidden md:inline">&VerticalBar;</span><span class="block md:ml-2 md:inline">Dakwerken LM</span></a>
+      <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakherstellingen LM <span
+          class="hidden md:inline">&VerticalBar;</span><span class="block md:ml-2 md:inline">Dakwerken
+          LM</span></a>
       <button id="navToggle" aria-label="Toggle navigation" aria-expanded="false"
         class="md:hidden flex flex-col justify-center items-center space-y-1 focus:outline-none">
         <span class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span>
@@ -260,7 +261,7 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm md:text-base border-t border-blue-300 pt-8">
         <div class="text-center">
           <h4 class="font-bold text-lg">Dakwerken LM</h4>
-          <h4 class="font-bold text-lg mb-2">Dakreiniging LM</h4>
+          <h4 class="font-bold text-lg mb-2">Dakherstellingen LM</h4>
           <p>&copy; 2025 Alle rechten voorbehouden</p>
           <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
             <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
