--- a/privacy.html
+++ b/privacy.html
@@ -5,184 +5,137 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="Lees het privacybeleid van Dakreiniging LM. Ontdek welke gegevens wij verzamelen, hoe we ze gebruiken en hoe we uw privacy beschermen.">
+    content="Lees het privacybeleid van Dakherstellingen LM. Ontdek welke gegevens wij verzamelen, hoe we ze gebruiken en hoe we uw privacy beschermen.">
   <meta name="robots" content="index, follow" />
-  <meta name="author" content="Dakreiniging LM" />
-
-  <meta property="og:title" content="Privacybeleid Dakreiniging LM - Veilig & Vertrouwd" />
+  <meta name="author" content="Dakherstellingen LM" />
+  <meta property="og:title" content="Privacybeleid Dakherstellingen LM - Veilig & Vertrouwd" />
   <meta property="og:description"
-    content="Lees het privacybeleid van Dakreiniging LM. Ontdek welke gegevens wij verzamelen, hoe we ze gebruiken en hoe we uw privacy beschermen." />
-  <meta property="og:url" content="https://www.dakreiniginglm.be/privacybeleid" />
+    content="Lees het privacybeleid van Dakherstellingen LM. Ontdek welke gegevens wij verzamelen, hoe we ze gebruiken en hoe we uw privacy beschermen." />
+  <meta property="og:url" content="https://www.dakherstellingenlm.be/privacybeleid" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png" />
-
+  <meta property="og:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Privacybeleid Dakreiniging LM - Veilig & Vertrouwd" />
+  <meta name="twitter:title" content="Privacybeleid Dakherstellingen LM - Veilig & Vertrouwd" />
   <meta name="twitter:description"
-    content="Lees het privacybeleid van Dakreiniging LM. Ontdek welke gegevens wij verzamelen, hoe we ze gebruiken en hoe we uw privacy beschermen." />
-  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png" />
-
-
-  <title>Privacybeleid Dakreiniging LM - Veilig & Vertrouwd</title>
-
+    content="Lees het privacybeleid van Dakherstellingen LM. Ontdek welke gegevens wij verzamelen, hoe we ze gebruiken en hoe we uw privacy beschermen." />
+  <meta name="twitter:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png" />
+  <title>Privacybeleid Dakherstellingen LM - Veilig & Vertrouwd</title>
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
   <link rel="shortcut icon" href="/assets/favicon/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png" />
-  <meta name="apple-mobile-web-app-title" content="Dakreiniging-LM" />
+  <meta name="apple-mobile-web-app-title" content="Dakherstellingen-LM" />
   <link rel="manifest" href="/assets/favicon/site.webmanifest" />
-
   <link rel="stylesheet" href="assets/css/output.css?v=20250724">
 </head>
 
 <body class="bg-white text-gray-800 leading-relaxed">
   <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500"
     role="navigation">
-    <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5">
-      <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakreiniging LM <span
+    <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5"> <a href="/"
+        class="text-blue-900 text-2xl font-bold tracking-tight">Dakherstellingen LM <span
           class="hidden md:inline">&VerticalBar;</span><span class="block md:ml-2 md:inline">Dakwerken LM</span></a>
       <button id="navToggle" aria-label="Toggle navigation" aria-expanded="false"
-        class="md:hidden flex flex-col justify-center items-center space-y-1 focus:outline-none">
-        <span class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span>
-        <span class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span>
-        <span class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span>
-      </button>
+        class="md:hidden flex flex-col justify-center items-center space-y-1 focus:outline-none"> <span
+          class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span> <span
+          class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span> <span
+          class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span> </button>
       <ul id="navMenu" role="menubar" aria-label="Hoofd navigatie"
         class="hidden md:flex flex-col md:flex-row md:space-x-6 space-y-4 md:space-y-0 absolute md:static top-full left-0 w-full md:w-auto bg-white md:bg-transparent px-6 md:px-0 py-6 md:py-0 text-blue-800 text-sm md:text-base font-medium transition-all duration-300 ease-in-out transform origin-top opacity-0 scale-95 md:opacity-100 md:scale-100">
-        <li role="menuitem">
-          <a href="/" class="group relative inline-block pb-1 w-full">
-            <span class="group-hover:text-blue-900 transition">Home</span>
-            <span
+        <li role="menuitem"> <a href="/" class="group relative inline-block pb-1 w-full"> <span
+              class="group-hover:text-blue-900 transition">Home</span> <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-          </a>
-        </li>
-        <li role="menuitem">
-          <a href="/#over-ons" class="group relative inline-block pb-1 w-full">
-            <span class="group-hover:text-blue-900 transition">Wie zijn wij</span>
-            <span
+          </a> </li>
+        <li role="menuitem"> <a href="/#over-ons" class="group relative inline-block pb-1 w-full"> <span
+              class="group-hover:text-blue-900 transition">Wie zijn wij</span> <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-          </a>
-        </li>
-        <li role="menuitem" class="relative">
-          <button id="dienstenToggle" aria-haspopup="true" aria-expanded="false"
-            class="group relative inline-flex items-center focus:outline-none cursor-pointer">
-            <span class="transition relative pb-1">
-              Onze Diensten
-              <span
+          </a> </li>
+        <li role="menuitem" class="relative"> <button id="dienstenToggle" aria-haspopup="true" aria-expanded="false"
+            class="group relative inline-flex items-center focus:outline-none cursor-pointer"> <span
+              class="transition relative pb-1"> Onze Diensten <span
                 class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"
-                aria-hidden="true"></span>
-            </span>
+                aria-hidden="true"></span> </span>
             <icon id="dienstenIcon" class="fas fa-caret-down ml-2 pb-1 text-blue-800 transition-transform duration-300">
             </icon>
           </button>
-
-
           <ul id="dienstenDropdown"
             class="hidden md:absolute md:-left-12 mt-0 md:mt-2 bg-white md:border md:border-blue-200 md:w-68 z-40 space-y-1 text-sm text-blue-800 transition transform origin-top opacity-0 scale-95 md:rounded-md md:shadow-lg">
-            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
-              <a href="/diensten/dakherstellingen-hellende-daken.html" class="group relative inline-block pb-1 w-full">
-                <span class="group-hover:text-blue-900 transition">Dakherstellingen Hellende Daken</span>
-                <span
+            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50"> <a href="/diensten/dakherstellingen-hellende-daken.html"
+                class="group relative inline-block pb-1 w-full"> <span
+                  class="group-hover:text-blue-900 transition">Dakherstellingen Hellende Daken</span> <span
                   class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-              </a>
-            </li>
-            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
-              <a href="/diensten/dakherstellingen-platte-daken.html" class="group relative inline-block pb-1 w-full">
-                <span class="group-hover:text-blue-900 transition">Dakherstellingen Platte Daken</span>
-                <span
+              </a> </li>
+            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50"> <a href="/diensten/dakherstellingen-platte-daken.html"
+                class="group relative inline-block pb-1 w-full"> <span
+                  class="group-hover:text-blue-900 transition">Dakherstellingen Platte Daken</span> <span
                   class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-              </a>
-            </li>
-            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50">
-              <a href="/diensten/dakreiniging-ontmossen.html" class="group relative inline-block pb-1 w-full">
-                <span class="group-hover:text-blue-900 transition">Dakreiniging & Ontmossen</span>
-                <span
+              </a> </li>
+            <li class="py-2 pl-2 md:pl-4 hover:bg-blue-50"> <a href="/diensten/dakreiniging-ontmossen.html"
+                class="group relative inline-block pb-1 w-full"> <span
+                  class="group-hover:text-blue-900 transition">Dakreiniging & Ontmossen</span> <span
                   class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-              </a>
-            </li>
+              </a> </li>
           </ul>
         </li>
-        <li role="menuitem">
-          <a href="/#recensies" class="group relative inline-block pb-1 w-full">
-            <span class="group-hover:text-blue-900 transition">Recensies</span>
-            <span
+        <li role="menuitem"> <a href="/#recensies" class="group relative inline-block pb-1 w-full"> <span
+              class="group-hover:text-blue-900 transition">Recensies</span> <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-          </a>
-        </li>
-        <li role="menuitem">
-          <a href="/#contact" class="group relative inline-block pb-1 w-full">
-            <span class="group-hover:text-blue-900 transition">Contact</span>
-            <span
+          </a> </li>
+        <li role="menuitem"> <a href="/#contact" class="group relative inline-block pb-1 w-full"> <span
+              class="group-hover:text-blue-900 transition">Contact</span> <span
               class="absolute left-0 bottom-0 h-0.5 w-0 bg-blue-800 transition-all duration-300 group-hover:w-full"></span>
-          </a>
-        </li>
+          </a> </li>
       </ul>
-
     </div>
   </nav>
-
   <main role="main">
     <section class="max-w-4xl mx-auto px-6 py-36 md:py-24">
       <div class="sm:block md:flex justify-between items-center mb-6">
         <h1 class="text-3xl font-bold text-blue-800 mb-4 md:mb-0">Privacybeleid</h1>
-        <p class="text-sm text-gray-500">Laatst bijgewerkt: 12 juli 2025</p>
+        <p class="text-sm text-gray-500">Laatst bijgewerkt: 14 oktober 2025</p>
       </div>
-
-      <p class="mb-4">Bij Dakreiniging LM hechten wij veel waarde aan uw privacy. In deze verklaring leggen we uit welke
-        gegevens we verzamelen, waarom we dat doen, en hoe we deze beveiligen.</p>
-
+      <p class="mb-4">Bij Dakherstellingen LM hechten wij veel waarde aan uw privacy. In deze verklaring leggen we uit
+        welke gegevens we verzamelen, waarom we dat doen, en hoe we deze beveiligen.</p>
       <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">1. Verzamelde gegevens</h2>
       <p class="mb-4">Via het contactformulier verzamelen we uw naam, e-mailadres en onderwerp. Deze gegevens worden
-        enkel
-        gebruikt om u te contacteren naar aanleiding van uw aanvraag.</p>
-
+        enkel gebruikt om u te contacteren naar aanleiding van uw aanvraag.</p>
       <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">2. Gebruik van Google Analytics</h2>
       <p class="mb-4">Deze website maakt gebruik van Google Analytics 4 om anonieme gegevens te verzamelen over het
-        gedrag
-        van bezoekers. Dit helpt ons de website te verbeteren. Er worden geen persoonsgegevens opgeslagen.</p>
-
+        gedrag van bezoekers. Dit helpt ons de website te verbeteren. Er worden geen persoonsgegevens opgeslagen.</p>
       <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">3. Geen opslag of verkoop van gegevens</h2>
       <p class="mb-4">Uw gegevens worden niet opgeslagen in een database, en worden nooit doorverkocht of gedeeld met
         derden.</p>
-
       <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">4. Gegevens laten verwijderen</h2>
       <p class="mb-4">U heeft het recht om uw gegevens te laten verwijderen. Stuur hiervoor een verzoek naar <a
-          href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
-          aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>.
-      </p>
-
-
+          href="mailto:info@dakherstellingenlm.be" class="text-blue-700 underline"
+          aria-label="Stuur een e-mail naar info@dakherstellingenlm.be">info@dakherstellingenlm.be</a>. </p>
       <h2 class="text-2xl font-semibold text-blue-700 mt-8 mb-2">5. Contact</h2>
       <p class="mb-4">Heeft u vragen over dit privacybeleid? Neem gerust contact met ons op via <a
-          href="mailto:info@dakreiniginglm.be" class="text-blue-700 underline"
-          aria-label="Stuur een e-mail naar info@dakreiniginglm.be">info@dakreiniginglm.be</a>.
-      </p>
+          href="mailto:info@dakherstellingenlm.be" class="text-blue-700 underline"
+          aria-label="Stuur een e-mail naar info@dakherstellingenlm.be">info@dakherstellingenlm.be</a>. </p>
     </section>
   </main>
-
   <footer class="bg-blue-900 text-white pt-12 pb-8">
     <div class="max-w-7xl mx-auto px-6">
       <div class="text-center mb-12">
-        <h3 class="text-2xl md:text-3xl font-bold mb-4">Klaar voor een propere en veilige dakoplossing?</h3>
-        <a href="/#contact"
+        <h3 class="text-2xl md:text-3xl font-bold mb-4">Klaar voor een propere en veilige dakoplossing?</h3> <a
+          href="/#contact"
           class="inline-block bg-white text-blue-900 font-semibold px-6 py-3 rounded-full hover:bg-gray-100 transition duration-300 shadow-md">
-          Contacteer ons
-        </a>
+          Contacteer ons </a>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm md:text-base border-t border-blue-300 pt-8">
         <div class="text-center">
           <h4 class="font-bold text-lg">Dakwerken LM</h4>
-          <h4 class="font-bold text-lg mb-2">Dakreiniging LM</h4>
+          <h4 class="font-bold text-lg mb-2">Dakherstellingen LM</h4>
           <p>&copy; 2025 Alle rechten voorbehouden</p>
-          <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
-            <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
-            <a href="/algemene-voorwaarden.html" class="underline hover:text-blue-200 transition">Algemene
-              Voorwaarden</a>
-          </div>
+          <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0"> <a
+              href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a> <a
+              href="/algemene-voorwaarden.html" class="underline hover:text-blue-200 transition">Algemene
+              Voorwaarden</a> </div>
         </div>
         <div class="text-center">
           <h4 class="font-semibold mb-2">Contact</h4>
-          <p class="mb-2"><i class="fas fa-envelope mr-2"></i>info@dakreiniginglm.be</p>
+          <p class="mb-2"><i class="fas fa-envelope mr-2"></i>info@dakherstellingenlm.be</p>
           <p><a href="tel:+32473671944"><i class="fas fa-phone mr-2"></i>&plus;32 473 67 19 44</a></p>
         </div>
         <div class="text-center">
@@ -192,19 +145,10 @@
       </div>
     </div>
   </footer>
-
   <script src="/assets/js/bundle-icon.js?v=20250718" defer></script>
   <script src="/assets/js/bundle-sub.js?v=20250718" defer></script>
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "Dakreiniging LM",
-      "url": "https://www.dakreiniginglm.be",
-      "email": "info@dakreiniginglm.be",
-      "logo": "https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png"
-    }
-    </script>
+  <script
+    type="application/ld+json">  {   "@context": "https://schema.org",   "@type": "Organization",   "name": "Dakherstellingen LM",   "url": "https://www.dakherstellingenlm.be",   "email": "info@dakherstellingenlm.be",   "logo": "https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png"  }  </script>
 </body>
 
 </html>
