--- a/diensten/dakreiniging-ontmossen.html
+++ b/diensten/dakreiniging-ontmossen.html
@@ -9,24 +9,24 @@
     content="Professionele dakreiniging & ontmossen door Dakreiniging LM in Herentals. Verwijder mos, algen en vuil van hellende en platte daken voor een langere levensduur. Vraag uw offerte aan!" />
   <meta name="keywords"
     content="dakreiniging, ontmossen, dak reinigen, mos dak, algen dak, dak coaten, dak impregneren, dakgoot reinigen, Herentals, Leuven" />
-  <meta name="author" content="Dakreiniging LM" />
+  <meta name="author" content="Dakherstellingen LM" />
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#1D4ED8" />
 
 
-  <meta property="og:title" content="Dakreiniging & Ontmossen | Dakreiniging LM" />
+  <meta property="og:title" content="Dakreiniging & Ontmossen | Dakherstellingen LM" />
   <meta property="og:description"
     content="Specialist in dakreiniging, ontmossen en coaten van daken in de regio Herentals en Leuven. Vraag een gratis offerte aan." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://www.dakreiniginglm.be/dakreiniging-ontmossen.html" />
-  <meta property="og:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
-  <meta property="og:site_name" content="Dakreiniging LM" />
+  <meta property="og:url" content="https://www.dakherstellingenlm.be/dakreiniging-ontmossen.html" />
+  <meta property="og:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+  <meta property="og:site_name" content="Dakherstellingen LM" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Dakreiniging & Ontmossen | Dakreiniging LM" />
+  <meta name="twitter:title" content="Dakreiniging & Ontmossen | Dakherstellingen LM" />
   <meta name="twitter:description"
     content="Laat uw dak professioneel reinigen en ontmossen. Verleng de levensduur van uw dak met onze milieuvriendelijke aanpak." />
-  <meta name="twitter:image" content="https://www.dakreiniginglm.be/assets/favicon/favicon-96x96.png?v=20250722" />
+  <meta name="twitter:image" content="https://www.dakherstellingenlm.be/assets/favicon/favicon-96x96.png?v=20250722" />
 
   <link rel="icon" type="image/png" href="/assets/favicon/favicon-96x96.png" sizes="96x96" />
   <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
@@ -37,9 +37,9 @@
 
   <link rel="stylesheet" href="/assets/css/output.css?v=20250724">
 
-  <link rel="canonical" href="https://www.dakreiniginglm.be/dakreiniging-ontmossen.html">
+  <link rel="canonical" href="https://www.dakherstellingenlm.be/dakreiniging-ontmossen.html">
 
-  <title>Dakreiniging & Ontmossen | Professionele Dakreiniging | Dakreiniging LM</title>
+  <title>Dakreiniging & Ontmossen | Professionele Dakreiniging | Dakherstellingen LM</title>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6ZMGVS5NW"></script>
   <script>
@@ -55,8 +55,9 @@
   <nav class="fixed top-0 w-full z-50 backdrop-blur-md bg-white/70 shadow-md border-b border-blue-500"
     role="navigation">
     <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5">
-      <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakreiniging LM <span
-          class="hidden md:inline">&VerticalBar;</span><span class="block md:ml-2 md:inline">Dakwerken LM</span></a>
+      <a href="/" class="text-blue-900 text-2xl font-bold tracking-tight">Dakherstellingen LM <span
+          class="hidden md:inline">&VerticalBar;</span><span class="block md:ml-2 md:inline">Dakwerken
+          LM</span></a>
       <button id="navToggle" aria-label="Toggle navigation" aria-expanded="false"
         class="md:hidden flex flex-col justify-center items-center space-y-1 focus:outline-none">
         <span class="w-6 h-0.5 bg-blue-800 transition-transform origin-center"></span>
@@ -255,7 +256,7 @@
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-sm md:text-base border-t border-blue-300 pt-8">
         <div class="text-center">
           <h4 class="font-bold text-lg">Dakwerken LM</h4>
-          <h4 class="font-bold text-lg mb-2">Dakreiniging LM</h4>
+          <h4 class="font-bold text-lg mb-2">Dakherstellingen LM</h4>
           <p>&copy; 2025 Alle rechten voorbehouden</p>
           <div class="flex flex-col md:flex-row md:gap-4 gap-2 items-center justify-center mt-4 md:mt-0">
             <a href="/privacy.html" class="underline hover:text-blue-200 transition">Privacy Policy</a>
